fe: adding some classic frammer motion

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,14 +7,14 @@ import ClimbingInfo from "@/components/ClimbingInfo.astro";
 <Layout title="Climbing Love">
   <div class="container mx-auto px-4 py-8">
     <div class="text-center my-16">
-      <h1 class="text-4xl font-extralight text-gray-100">
-        Welcome to Climbing Love
+      <h1 class="text-5xl font-extralight text-gray-100">
+        Welcome to Climbing Love &hearts;
       </h1>
       <p class="text-md text-gray-200">Your source for all things climbing</p>
     </div>
     <div>
       <h2 class="text-3xl font-extralight text-gray-100">Types of Climbing</h2>
-      <div class="grid grid-cols-2 gap-4 mt-8 max-w-screen-xl">
+      <div class="grid grid-cols-2 gap-4 mt-4">
         <ClimbingInfo
           title="Bouldering"
           description="Bouldering is a style of climbing that involves short, challenging routes, or 'problems,' typically no higher than 20 feet. Climbers tackle these problems without ropes or harnesses, relying solely on their strength, technique, and problem-solving skills."
