--- a/src/components/ClimbingInfo.astro
+++ b/src/components/ClimbingInfo.astro
@@ -7,6 +7,7 @@ import {
   CardHeader,
   CardTitle,
 } from "@/components/ui/card";
+import { motion } from "framer-motion";
 
 type Props = {
   title: string;
@@ -17,22 +18,37 @@ type Props = {
 const { title, description, imgUrl } = Astro.props;
 ---
 
-<Card>
-  <CardHeader>
-    <CardTitle className="mb-4">{title}</CardTitle>
-    <CardContent className="p-0" style={{ marginBottom: 8 }}>
-      <img
-        src={imgUrl}
-        alt={`Image of someone doing ${title}`}
-        width={"100%"}
-        height={"auto"}
-      />
-    </CardContent>
-    <CardDescription>
-      {description}
-    </CardDescription>
-    <!-- <CardFooter> -->
-    <!--   <p>Card Footer</p> -->
-    <!-- </CardFooter> -->
-  </CardHeader>
-</Card>
+<motion.div
+  client:load
+  initial={{ opacity: 0, rotate: 1 }}
+  animate={{ opacity: 1, rotate: 0, transition: { duration: 0.5 } }}
+  exit={{ opacity: 0 }}
+  whileHover={{ scale: 1.01, cursor: "pointer", transition: { duration: 0.8 } }}
+  whileTap={{ scale: 0.98 }}
+>
+  <Card className="card-bg">
+    <CardHeader>
+      <CardTitle className="mb-4">{title}</CardTitle>
+      <CardContent className="p-0" style={{ marginBottom: 8 }}>
+        <img
+          src={imgUrl}
+          alt={`Image of someone doing ${title}`}
+          width={"100%"}
+          height={"auto"}
+        />
+      </CardContent>
+      <CardDescription>
+        {description}
+      </CardDescription>
+      <!-- <CardFooter> -->
+      <!--   <p>Card Footer</p> -->
+      <!-- </CardFooter> -->
+    </CardHeader>
+  </Card>
+</motion.div>
+
+<style>
+  .card-bg:hover {
+    background-color: #22043b;
+  }
+</style>
